--- a/[1]eda.ipynb
+++ b/[1]eda.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "(5110, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -308,6 +308,7 @@
    ],
    "source": [
     "data.hist(figsize=(10,10),xrot=45)\n",
+    "plt.savefig('figures/numeric_features_distribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -324,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +465,7 @@
        "max           271.740000    97.600000     1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +570,7 @@
        "freq      2994         3353      2925           2596           1892"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -646,14 +647,18 @@
    ],
    "source": [
     "# Plotting catagorical features\n",
+    "\n",
     "for col in data.select_dtypes(include='object'):\n",
     "    sns.countplot(y=col, data=data)\n",
+    "    plt.savefig(f'categorical_feature_{col}', dpi=300, bbox_inches='tight')\n",
+    "    \n",
+    "    \n",
     "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -758,6 +763,7 @@
    "source": [
     "# boxplot for id\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'id', data=data)\n",
+    "plt.savefig('stroke_against_id.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -770,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -787,6 +793,7 @@
    "source": [
     "# boxplot for age\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'age', data=data)\n",
+    "plt.savefig('stroke_against_age.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -799,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -816,6 +823,7 @@
    "source": [
     "# boxplot for hypertension\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'hypertension', data=data)\n",
+    "plt.savefig('stroke_against_hypertension.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -828,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -845,6 +853,7 @@
    "source": [
     "# boxplot for heart disease\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'heart_disease', data=data)\n",
+    "plt.savefig('stroke_against_heart_disease.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -857,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -874,6 +883,7 @@
    "source": [
     "# boxplot for avg_glucose_level\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'avg_glucose_level', data=data)\n",
+    "plt.savefig('stroke_against_avg_glucose_level.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -886,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -903,6 +913,7 @@
    "source": [
     "# boxplot for bmi\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'bmi', data=data)\n",
+    "plt.savefig('stroke_against_bmi.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -923,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1234,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -1293,7 +1304,8 @@
    "source": [
     "for col in data.select_dtypes(include='object'):\n",
     "    g = sns.catplot(x = col, kind='count', col = 'stroke', data=data, sharey=False)\n",
-    "    g.set_xticklabels(rotation=60)"
+    "    g.set_xticklabels(rotation=60)\n",
+    "    plt.savefig(f'targest_against_{col}.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -1314,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1920,7 @@
        "stroke                      0.131945  0.042374  1.000000  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1920,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1938,6 +1950,7 @@
     "# Visualization using seaborn heatmap\n",
     "plt.figure(figsize=(6,6))\n",
     "sns.heatmap(corr, cmap='RdBu_r', annot=True, vmax=1, vmin=-1)\n",
+    "plt.savefig('correlation_matrix.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
