--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +206,11 @@
     "# n_jobs = number of cores to be used in parallel, -1 means use all\n",
     "# cv = number of cross validation set elements\n",
     "\n",
-    "best_model = GridSearchCV(estimator=KNeighborsClassifier(),\n",
-    "                         param_grid=hyperparameters, \n",
-    "                         scoring = 'f1',\n",
-    "                         n_jobs=-1,\n",
-    "                         cv=10)\n",
+    "best_model = GridSearchCV(estimator=KNeighborsClassifier(), \n",
+    "                          param_grid=hyperparameters, \n",
+    "                          scoring = 'f1',\n",
+    "                          n_jobs=-1,\n",
+    "                          cv=10)\n",
     "\n",
     "# Fit the model\n",
     "best_model = best_model.fit(x_train,y_train)"
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -300,6 +300,31 @@
     "\n",
     "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
     "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.97      0.97       953\n",
+      "           1       0.97      0.97      0.97       927\n",
+      "\n",
+      "    accuracy                           0.97      1880\n",
+      "   macro avg       0.97      0.97      0.97      1880\n",
+      "weighted avg       0.97      0.97      0.97      1880\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, predictions))"
    ]
   }
  ],
