--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -43,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Min Max Normalization"
+    "## Min Max Normalization"
    ]
   },
   {
@@ -118,15 +118,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 96.91%\n",
-      "F1 score for class Stroke = 0 --> 96.81%\n"
+      "F1 score for class Stroke = 1 --> 96.81%\n",
+      "F1 score for class Stroke = 0 --> 96.91%\n"
      ]
     }
    ],
    "source": [
     "# Performance\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
     "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
     "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
@@ -236,8 +236,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use New Hyperparameters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -281,22 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 97.23%\n",
-      "F1 score for class Stroke = 0 --> 97.13%\n"
+      "F1 score for class Stroke = 1 --> 97.13%\n",
+      "F1 score for class Stroke = 0 --> 97.23%\n"
      ]
     }
    ],
    "source": [
     "# Performance after hyperparameter tuning\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
     "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
     "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
@@ -304,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
