moved original dataset to data directory

--- a/[1]eda.ipynb
+++ b/[1]eda.ipynb
@@ -4,14 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resources\n",
-    "- https://towardsdatascience.com/13-key-code-blocks-for-eda-classification-task-94890622be57"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Exploratory Data Analysis\n",
     "\n",
     "Context: \n",
@@ -50,17 +42,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load the dataset\n",
-    "data = pd.read_csv('dataset_original.csv')"
+    "data = pd.read_csv('data/dataset_original.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +193,7 @@
        "4       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +214,7 @@
        "(5110, 12)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +300,7 @@
    ],
    "source": [
     "data.hist(figsize=(10,10),xrot=45)\n",
-    "plt.savefig('figures/numeric_features_distribution.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('numeric_features_distribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -325,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +457,7 @@
        "max           271.740000    97.600000     1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +562,7 @@
        "freq      2994         3353      2925           2596           1892"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": false
    },
@@ -650,7 +642,7 @@
     "\n",
     "for col in data.select_dtypes(include='object'):\n",
     "    sns.countplot(y=col, data=data)\n",
-    "    plt.savefig(f'categorical_feature_{col}', dpi=300, bbox_inches='tight')\n",
+    "#     plt.savefig(f'categorical_feature_{col}', dpi=300, bbox_inches='tight')\n",
     "    \n",
     "    \n",
     "    plt.show()"
@@ -658,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +755,7 @@
    "source": [
     "# boxplot for id\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'id', data=data)\n",
-    "plt.savefig('stroke_against_id.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_id.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -776,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +785,7 @@
    "source": [
     "# boxplot for age\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'age', data=data)\n",
-    "plt.savefig('stroke_against_age.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_age.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -806,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +815,7 @@
    "source": [
     "# boxplot for hypertension\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'hypertension', data=data)\n",
-    "plt.savefig('stroke_against_hypertension.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_hypertension.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -836,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +845,7 @@
    "source": [
     "# boxplot for heart disease\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'heart_disease', data=data)\n",
-    "plt.savefig('stroke_against_heart_disease.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_heart_disease.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -866,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +875,7 @@
    "source": [
     "# boxplot for avg_glucose_level\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'avg_glucose_level', data=data)\n",
-    "plt.savefig('stroke_against_avg_glucose_level.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_avg_glucose_level.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -896,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +905,7 @@
    "source": [
     "# boxplot for bmi\n",
     "sns.boxplot(x = data['stroke'].astype('category'), y = 'bmi', data=data)\n",
-    "plt.savefig('stroke_against_bmi.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('stroke_against_bmi.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -934,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -1305,7 +1297,7 @@
     "for col in data.select_dtypes(include='object'):\n",
     "    g = sns.catplot(x = col, kind='count', col = 'stroke', data=data, sharey=False)\n",
     "    g.set_xticklabels(rotation=60)\n",
-    "    plt.savefig(f'targest_against_{col}.png', dpi=300, bbox_inches='tight')"
+    "#     plt.savefig(f'targest_against_{col}.png', dpi=300, bbox_inches='tight')"
    ]
   },
   {
@@ -1326,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1792,7 +1784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1920,7 +1912,7 @@
        "stroke                      0.131945  0.042374  1.000000  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1942,7 @@
     "# Visualization using seaborn heatmap\n",
     "plt.figure(figsize=(6,6))\n",
     "sns.heatmap(corr, cmap='RdBu_r', annot=True, vmax=1, vmin=-1)\n",
-    "plt.savefig('correlation_matrix.png', dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig('correlation_matrix.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
