--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,9 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import time\n",
+    "import json"
    ]
   },
   {
@@ -118,18 +120,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 96.81%\n",
-      "F1 score for class Stroke = 0 --> 96.91%\n"
+      "F1 score for class Stroke = 1 --> 96.813%\n",
+      "F1 score for class Stroke = 0 --> 96.909%\n"
      ]
     }
    ],
    "source": [
     "# Performance\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
+    "f1_score_stroke_vanilla = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke_vanilla = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
-    "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
-    "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
+    "f1_score_stroke_vanilla = round(f1_score_stroke_vanilla*100, 3)\n",
+    "f1_score_no_stroke_vanilla = round(f1_score_no_stroke_vanilla*100, 3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f'F1 score for class Stroke = 1 --> {f1_score_stroke_vanilla}%')\n",
+    "print(f'F1 score for class Stroke = 0 --> {f1_score_no_stroke_vanilla}%')"
    ]
   },
   {
@@ -246,21 +253,58 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to Train --> 0.0029 seconds\n"
+     ]
+    }
+   ],
    "source": [
+    "# start timer\n",
+    "start_time = time.time()\n",
+    "\n",
     "# model\n",
     "k_nearest_neighbours = KNeighborsClassifier(n_neighbors=n_neighbors, metric='euclidean')\n",
     "\n",
     "# fit the model\n",
     "k_nearest_neighbours.fit(x_train, y_train)\n",
     "\n",
-    "# prediction\n",
-    "predictions = k_nearest_neighbours.predict(x_test)"
+    "# Time to train\n",
+    "time_to_train = round(time.time() - start_time, 4)\n",
+    "print(f'Time to Train --> {time_to_train} seconds')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inference time --> 0.2504 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start timer\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# prediction\n",
+    "predictions = k_nearest_neighbours.predict(x_test)\n",
+    "\n",
+    "# Inference time\n",
+    "inference_time = round(time.time() - start_time, 4)\n",
+    "print(f'Inference time --> {inference_time} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -288,30 +332,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 97.13%\n",
-      "F1 score for class Stroke = 0 --> 97.23%\n"
+      "F1 score for class Stroke = 1 --> 97.134%\n",
+      "F1 score for class Stroke = 0 --> 97.227%\n"
      ]
     }
    ],
    "source": [
     "# Performance after hyperparameter tuning\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
+    "f1_score_stroke_hp_tuning = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke_hp_tuning = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
-    "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
-    "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
+    "f1_score_stroke_hp_tuning = round(f1_score_stroke_hp_tuning*100, 3)\n",
+    "f1_score_no_stroke_hp_tuning = round(f1_score_no_stroke_hp_tuning*100, 3)\n",
+    "\n",
+    "print(f'F1 score for class Stroke = 1 --> {f1_score_stroke_hp_tuning}%')\n",
+    "print(f'F1 score for class Stroke = 0 --> {f1_score_no_stroke_hp_tuning}%')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -332,6 +379,70 @@
    ],
    "source": [
     "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "96.813\n",
+      "96.909\n",
+      "---------------------------------\n",
+      "97.134\n",
+      "97.227\n",
+      "---------------------------------\n",
+      "0.0029\n",
+      "0.2504\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f1_score_stroke_vanilla)\n",
+    "print(f1_score_no_stroke_vanilla)\n",
+    "print('---------------------------------')\n",
+    "print(f1_score_stroke_hp_tuning)\n",
+    "print(f1_score_no_stroke_hp_tuning)\n",
+    "print('---------------------------------')\n",
+    "print(time_to_train)\n",
+    "print(inference_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving numbers to JSON\n",
+    "\n",
+    "Since this is the first model, this will create the JSON file, the other models will add to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_dict = dict()\n",
+    "\n",
+    "json_dict['knn'] = {\n",
+    "    \"scores_vanilla\":{\"with_stroke\":f1_score_stroke_vanilla, \"without_stroke\":f1_score_no_stroke_vanilla},\n",
+    "    \"scores_after_hp_tuning\":{\"with_stroke\":f1_score_stroke_hp_tuning, \"without_stroke\":f1_score_no_stroke_hp_tuning},\n",
+    "    \"time\":{\"time_to_train_final_model\":time_to_train, \"inference_time_on_final_model\":inference_time}}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data.json', 'w') as fp:\n",
+    "    json.dump(json_dict, fp,  indent=4)"
    ]
   }
  ],
