--- a/[4]support_vector_machine.ipynb
+++ b/[4]support_vector_machine.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,9 @@
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import f1_score\n",
-    "from sklearn.model_selection import GridSearchCV"
+    "from sklearn.model_selection import GridSearchCV\n",
+    "import time\n",
+    "import json"
    ]
   },
   {
@@ -101,18 +103,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 82.66%\n",
-      "F1 score for class Stroke = 0 --> 80.87%\n"
+      "F1 score for class Stroke = 1 --> 82.657%\n",
+      "F1 score for class Stroke = 0 --> 80.872%\n"
      ]
     }
    ],
    "source": [
     "# Performance\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
+    "f1_score_stroke_vanilla = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke_vanilla = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
-    "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
-    "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
+    "f1_score_stroke_vanilla = round(f1_score_stroke_vanilla*100, 3)\n",
+    "f1_score_no_stroke_vanilla = round(f1_score_no_stroke_vanilla*100, 3)\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(f'F1 score for class Stroke = 1 --> {f1_score_stroke_vanilla}%')\n",
+    "print(f'F1 score for class Stroke = 0 --> {f1_score_no_stroke_vanilla}%')"
    ]
   },
   {
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -225,15 +232,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use new hyperparameters"
+    "## Use New Hyperparameters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time to Train --> 1.0842 seconds\n"
+     ]
+    }
+   ],
    "source": [
+    "# start timer\n",
+    "start_time = time.time()\n",
+    "\n",
     "# model\n",
     "svm = SVC(kernel='rbf', \n",
     "          C=C,\n",
@@ -243,13 +261,39 @@
     "# fit the model\n",
     "svm.fit(x_train, y_train)\n",
     "\n",
-    "# prediction\n",
-    "predictions = svm.predict(x_test)"
+    "# Time to train\n",
+    "time_to_train = round(time.time() - start_time, 4)\n",
+    "print(f'Time to Train --> {time_to_train} seconds')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inference time --> 0.2019 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# start timer\n",
+    "start_time = time.time()\n",
+    "\n",
+    "# prediction\n",
+    "predictions = svm.predict(x_test)\n",
+    "\n",
+    "# Inference time\n",
+    "inference_time = round(time.time() - start_time, 4)\n",
+    "print(f'Inference time --> {inference_time} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,18 +328,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 score for class Stroke = 1 --> 96.35%\n",
-      "F1 score for class Stroke = 0 --> 96.3%\n"
+      "F1 score for class Stroke = 1 --> 96.355%\n",
+      "F1 score for class Stroke = 0 --> 96.304%\n"
      ]
     }
    ],
    "source": [
-    "# Performance\n",
-    "f1_score_stroke = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
-    "f1_score_no_stroke= f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
+    "# Performance after hyperparameter tuning\n",
+    "f1_score_stroke_hp_tuning = f1_score(y_true=y_test, y_pred=predictions, pos_label=1)\n",
+    "f1_score_no_stroke_hp_tuning = f1_score(y_true=y_test, y_pred=predictions, pos_label=0)\n",
     "\n",
-    "print(f'F1 score for class Stroke = 1 --> {round(f1_score_stroke*100, 2)}%')\n",
-    "print(f'F1 score for class Stroke = 0 --> {round(f1_score_no_stroke*100, 2)}%')"
+    "f1_score_stroke_hp_tuning = round(f1_score_stroke_hp_tuning*100, 3)\n",
+    "f1_score_no_stroke_hp_tuning = round(f1_score_no_stroke_hp_tuning*100, 3)\n",
+    "\n",
+    "print(f'F1 score for class Stroke = 1 --> {f1_score_stroke_hp_tuning}%')\n",
+    "print(f'F1 score for class Stroke = 0 --> {f1_score_no_stroke_hp_tuning}%')"
    ]
   },
   {
@@ -321,6 +368,67 @@
    ],
    "source": [
     "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "82.657\n",
+      "80.872\n",
+      "---------------------------------\n",
+      "96.355\n",
+      "96.304\n",
+      "---------------------------------\n",
+      "1.0842\n",
+      "0.2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f1_score_stroke_vanilla)\n",
+    "print(f1_score_no_stroke_vanilla)\n",
+    "print('---------------------------------')\n",
+    "print(f1_score_stroke_hp_tuning)\n",
+    "print(f1_score_no_stroke_hp_tuning)\n",
+    "print('---------------------------------')\n",
+    "print(time_to_train)\n",
+    "print(inference_time)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving numbers to JSON\n",
+    "\n",
+    "Since this isnt the first model, read the previously made JSON file and then add to it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read previously created JSON\n",
+    "with open('data.json') as json_file:\n",
+    "    json_dict = json.load(json_file)\n",
+    "\n",
+    "# add to it\n",
+    "json_dict['svm'] = {\n",
+    "    \"scores_vanilla\":{\"with_stroke\":f1_score_stroke_vanilla, \"without_stroke\":f1_score_no_stroke_vanilla},\n",
+    "    \"scores_after_hp_tuning\":{\"with_stroke\":f1_score_stroke_hp_tuning, \"without_stroke\":f1_score_no_stroke_hp_tuning},\n",
+    "    \"time\":{\"time_to_train_final_model\":time_to_train, \"inference_time_on_final_model\":inference_time}}\n",
+    "\n",
+    "# write to it\n",
+    "with open('data.json', 'w') as fp:\n",
+    "    json.dump(json_dict, fp,  indent=4)"
    ]
   }
  ],
