--- a/[3]knn.ipynb
+++ b/[3]knn.ipynb
@@ -258,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time to Train --> 0.0029 seconds\n"
+      "Time to Train --> 0.0028 seconds\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inference time --> 0.2569 seconds\n"
+      "Inference time --> 0.2441 seconds\n"
      ]
     }
    ],
@@ -383,7 +383,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage increase for F1 score with stroke --> 0.332%\n",
+      "Percentage increase for F1 score without stroke --> 0.328%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# percentage improvement due to hyperparameter tuning\n",
+    "score_increase_stroke = round(((f1_score_stroke_hp_tuning - f1_score_stroke_vanilla)/f1_score_stroke_vanilla)*100, 3)\n",
+    "score_increase_no_stroke = round(((f1_score_no_stroke_hp_tuning - f1_score_no_stroke_vanilla)/f1_score_no_stroke_vanilla)*100, 3)\n",
+    "\n",
+    "print(f'Percentage increase for F1 score with stroke --> {score_increase_stroke}%')\n",
+    "print(f'Percentage increase for F1 score without stroke --> {score_increase_no_stroke}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +419,11 @@
       "97.134\n",
       "97.227\n",
       "---------------------------------\n",
-      "0.0029\n",
-      "0.2569\n"
+      "0.332\n",
+      "0.328\n",
+      "---------------------------------\n",
+      "0.0028\n",
+      "0.2441\n"
      ]
     }
    ],
@@ -407,6 +433,9 @@
     "print('---------------------------------')\n",
     "print(f1_score_stroke_hp_tuning)\n",
     "print(f1_score_no_stroke_hp_tuning)\n",
+    "print('---------------------------------')\n",
+    "print(score_increase_stroke)\n",
+    "print(score_increase_no_stroke)\n",
     "print('---------------------------------')\n",
     "print(time_to_train)\n",
     "print(inference_time)"
@@ -423,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,12 +461,13 @@
     "json_dict['knn'] = {\n",
     "    \"scores_vanilla\":{\"with_stroke\":f1_score_stroke_vanilla, \"without_stroke\":f1_score_no_stroke_vanilla},\n",
     "    \"scores_after_hp_tuning\":{\"with_stroke\":f1_score_stroke_hp_tuning, \"without_stroke\":f1_score_no_stroke_hp_tuning},\n",
+    "    \"percentage_increase\":{\"with_stroke\":score_increase_stroke, \"without_stroke\":score_increase_no_stroke},\n",
     "    \"time\":{\"time_to_train_final_model\":time_to_train, \"inference_time_on_final_model\":inference_time}}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
