--- a/[5]random_forest.ipynb
+++ b/[5]random_forest.ipynb
@@ -52,7 +52,11 @@
    "outputs": [],
    "source": [
     "# model\n",
-    "random_forest = RandomForestClassifier(n_estimators=100, criterion='gini', random_state=1, )\n",
+    "random_forest = RandomForestClassifier(n_estimators=100, \n",
+    "                                       criterion='gini', \n",
+    "                                       random_state=1, \n",
+    "                                       bootstrap=True, \n",
+    "                                       max_depth=None)\n",
     "\n",
     "# fit the model\n",
     "random_forest.fit(x_train, y_train)\n",
